[gd_scene load_steps=20 format=2]

[ext_resource path="res://Assets/Other/slider.png" type="Texture" id=1]
[ext_resource path="res://Assets/Style/Pixellari_style.tres" type="Theme" id=2]
[ext_resource path="res://Assets/Style/button_styleboxflat.tres" type="StyleBox" id=3]
[ext_resource path="res://Scripts/UI/Settings.gd" type="Script" id=4]
[ext_resource path="res://Assets/Style/button_styleboxflat_hover.tres" type="StyleBox" id=5]
[ext_resource path="res://Assets/MenuBg.png" type="Texture" id=6]
[ext_resource path="res://Assets/Style/small_text.tres" type="Theme" id=7]

[sub_resource type="StyleBoxFlat" id=9]
content_margin_left = 10.0
content_margin_right = 10.0
bg_color = Color( 0, 0, 0, 0.862745 )
corner_radius_top_left = 10

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0, 0, 0.862745 )
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="ImageTexture" id=6]

[sub_resource type="ImageTexture" id=7]

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 400, 50 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 0.392157 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0.392157 )

[sub_resource type="ImageTexture" id=1]

[sub_resource type="ImageTexture" id=2]

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.117647, 0.117647, 0.117647, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.196078, 0.196078, 0.196078, 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 7

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -308.0
margin_top = -152.0
margin_right = 300.0
margin_bottom = 135.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="Control" type="Control" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 588.0
margin_bottom = 267.0

[node name="TabContainer" type="TabContainer" parent="MarginContainer/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -282.0
margin_top = -208.5
margin_right = 282.0
margin_bottom = 208.5
theme = ExtResource( 7 )
custom_constants/side_margin = 0
custom_styles/tab_fg = SubResource( 9 )
custom_styles/panel = SubResource( 8 )
tab_align = 0

[node name="Audio" type="VBoxContainer" parent="MarginContainer/Control/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 41.0

[node name="Control" type="Control" parent="MarginContainer/Control/TabContainer/Audio"]
margin_right = 564.0
margin_bottom = 186.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Audio" type="Label" parent="MarginContainer/Control/TabContainer/Audio/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -62.0
margin_right = 200.0
margin_bottom = -2.0
theme = ExtResource( 2 )
text = "K_SFX"

[node name="AudiSlider" type="HSlider" parent="MarginContainer/Control/TabContainer/Audio/Control" groups=["ui_sliders"]]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -1.0
margin_right = 200.0
margin_bottom = 49.0
rect_rotation = 180.0
rect_pivot_offset = Vector2( 200, 25 )
custom_icons/grabber_highlight = SubResource( 6 )
custom_icons/grabber = SubResource( 7 )
custom_styles/slider = SubResource( 3 )
custom_styles/grabber_area_highlight = SubResource( 5 )
custom_styles/grabber_area = SubResource( 4 )
max_value = 10.0
value = 5.0
scrollable = false

[node name="Control2" type="Control" parent="MarginContainer/Control/TabContainer/Audio"]
margin_top = 190.0
margin_right = 564.0
margin_bottom = 376.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Music" type="Label" parent="MarginContainer/Control/TabContainer/Audio/Control2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -62.0
margin_right = 200.0
margin_bottom = -2.0
theme = ExtResource( 2 )
text = "K_MUSIC"

[node name="MusicSlider" type="HSlider" parent="MarginContainer/Control/TabContainer/Audio/Control2" groups=["ui_sliders"]]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -1.0
margin_right = 200.0
margin_bottom = 49.0
rect_rotation = 180.0
rect_pivot_offset = Vector2( 200, 25 )
custom_icons/grabber_highlight = SubResource( 1 )
custom_icons/grabber = SubResource( 2 )
custom_styles/slider = SubResource( 3 )
custom_styles/grabber_area_highlight = SubResource( 4 )
custom_styles/grabber_area = SubResource( 4 )
max_value = 10.0
value = 5.0
scrollable = false

[node name="Control" type="MarginContainer" parent="MarginContainer/Control/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 41.0
custom_constants/margin_right = 0
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="Scroll" type="ScrollContainer" parent="MarginContainer/Control/TabContainer/Control"]
margin_left = 20.0
margin_top = 20.0
margin_right = 564.0
margin_bottom = 356.0
scroll_horizontal_enabled = false

[node name="VBox" type="VBoxContainer" parent="MarginContainer/Control/TabContainer/Control/Scroll"]
margin_left = 7.0
margin_right = 537.0
margin_bottom = 755.0
size_flags_horizontal = 6
size_flags_vertical = 6
custom_constants/separation = 15
alignment = 1

[node name="MOVE_LEFT" type="HBoxContainer" parent="MarginContainer/Control/TabContainer/Control/Scroll/VBox"]
margin_right = 530.0
margin_bottom = 62.0
size_flags_vertical = 6
custom_constants/separation = 40

[node name="Left" type="Label" parent="MarginContainer/Control/TabContainer/Control/Scroll/VBox/MOVE_LEFT"]
margin_right = 300.0
margin_bottom = 62.0
rect_min_size = Vector2( 300, 0 )
theme = ExtResource( 2 )
text = "K_S_LEFT"

[node name="Button" type="Button" parent="MarginContainer/Control/TabContainer/Control/Scroll/VBox/MOVE_LEFT"]
margin_left = 340.0
margin_right = 530.0
margin_bottom = 62.0
rect_min_size = Vector2( 190, 0 )
focus_mode = 0
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 12 )
custom_styles/normal = SubResource( 11 )
toggle_mode = true
enabled_focus_mode = 0
text = "LEFT ARROW"

[node name="MOVE_RIGHT" type="HBoxContainer" parent="MarginContainer/Control/TabContainer/Control/Scroll/VBox"]
margin_top = 77.0
margin_right = 530.0
margin_bottom = 139.0
size_flags_vertical = 6
custom_constants/separation = 40

[node name="Right" type="Label" parent="MarginContainer/Control/TabContainer/Control/Scroll/VBox/MOVE_RIGHT"]
margin_right = 300.0
margin_bottom = 62.0
rect_min_size = Vector2( 300, 0 )
theme = ExtResource( 2 )
text = "K_S_RIGHT"

[node name="Button" type="Button" parent="MarginContainer/Control/TabContainer/Control/Scroll/VBox/MOVE_RIGHT"]
margin_left = 340.0
margin_right = 530.0
margin_bottom = 62.0
rect_min_size = Vector2( 190, 0 )
focus_mode = 0
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 12 )
custom_styles/normal = SubResource( 11 )
toggle_mode = true
enabled_focus_mode = 0
text = "LEFT ARROW"

[node name="MOVE_UP" type="HBoxContainer" parent="MarginContainer/Control/TabContainer/Control/Scroll/VBox"]
margin_top = 154.0
margin_right = 530.0
margin_bottom = 216.0
size_flags_vertical = 6
custom_constants/separation = 40

[node name="Up" type="Label" parent="MarginContainer/Control/TabContainer/Control/Scroll/VBox/MOVE_UP"]
margin_right = 300.0
margin_bottom = 62.0
rect_min_size = Vector2( 300, 0 )
theme = ExtResource( 2 )
text = "K_S_UP"

[node name="Button" type="Button" parent="MarginContainer/Control/TabContainer/Control/Scroll/VBox/MOVE_UP"]
margin_left = 340.0
margin_right = 530.0
margin_bottom = 62.0
rect_min_size = Vector2( 190, 0 )
focus_mode = 0
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 12 )
custom_styles/normal = SubResource( 11 )
toggle_mode = true
enabled_focus_mode = 0
text = "LEFT ARROW"

[node name="MOVE_DOWN" type="HBoxContainer" parent="MarginContainer/Control/TabContainer/Control/Scroll/VBox"]
margin_top = 231.0
margin_right = 530.0
margin_bottom = 293.0
size_flags_vertical = 6
custom_constants/separation = 40

[node name="Down" type="Label" parent="MarginContainer/Control/TabContainer/Control/Scroll/VBox/MOVE_DOWN"]
margin_right = 300.0
margin_bottom = 62.0
rect_min_size = Vector2( 300, 0 )
theme = ExtResource( 2 )
text = "K_S_DOWN"

[node name="Button" type="Button" parent="MarginContainer/Control/TabContainer/Control/Scroll/VBox/MOVE_DOWN"]
margin_left = 340.0
margin_right = 530.0
margin_bottom = 62.0
rect_min_size = Vector2( 190, 0 )
focus_mode = 0
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 12 )
custom_styles/normal = SubResource( 11 )
toggle_mode = true
enabled_focus_mode = 0
text = "LEFT ARROW"

[node name="BUILD" type="HBoxContainer" parent="MarginContainer/Control/TabContainer/Control/Scroll/VBox"]
margin_top = 308.0
margin_right = 530.0
margin_bottom = 370.0
size_flags_vertical = 6
custom_constants/separation = 40

[node name="Build" type="Label" parent="MarginContainer/Control/TabContainer/Control/Scroll/VBox/BUILD"]
margin_right = 300.0
margin_bottom = 62.0
rect_min_size = Vector2( 300, 0 )
theme = ExtResource( 2 )
text = "K_S_BLD"

[node name="Button" type="Button" parent="MarginContainer/Control/TabContainer/Control/Scroll/VBox/BUILD"]
margin_left = 340.0
margin_right = 530.0
margin_bottom = 62.0
rect_min_size = Vector2( 190, 0 )
focus_mode = 0
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 12 )
custom_styles/normal = SubResource( 11 )
toggle_mode = true
enabled_focus_mode = 0
text = "LEFT ARROW"

[node name="E_ATTACKER" type="HBoxContainer" parent="MarginContainer/Control/TabContainer/Control/Scroll/VBox"]
margin_top = 385.0
margin_right = 530.0
margin_bottom = 447.0
size_flags_vertical = 6
custom_constants/separation = 40

[node name="Attack" type="Label" parent="MarginContainer/Control/TabContainer/Control/Scroll/VBox/E_ATTACKER"]
margin_right = 300.0
margin_bottom = 62.0
rect_min_size = Vector2( 300, 0 )
theme = ExtResource( 2 )
text = "K_S_E_A"

[node name="Button" type="Button" parent="MarginContainer/Control/TabContainer/Control/Scroll/VBox/E_ATTACKER"]
margin_left = 340.0
margin_right = 530.0
margin_bottom = 62.0
rect_min_size = Vector2( 190, 0 )
focus_mode = 0
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 12 )
custom_styles/normal = SubResource( 11 )
toggle_mode = true
enabled_focus_mode = 0
text = "LEFT ARROW"

[node name="E_DEFENDER" type="HBoxContainer" parent="MarginContainer/Control/TabContainer/Control/Scroll/VBox"]
margin_top = 462.0
margin_right = 530.0
margin_bottom = 524.0
size_flags_vertical = 6
custom_constants/separation = 40

[node name="Defend" type="Label" parent="MarginContainer/Control/TabContainer/Control/Scroll/VBox/E_DEFENDER"]
margin_right = 300.0
margin_bottom = 62.0
rect_min_size = Vector2( 300, 0 )
theme = ExtResource( 2 )
text = "K_S_E_D"

[node name="Button" type="Button" parent="MarginContainer/Control/TabContainer/Control/Scroll/VBox/E_DEFENDER"]
margin_left = 340.0
margin_right = 530.0
margin_bottom = 62.0
rect_min_size = Vector2( 190, 0 )
focus_mode = 0
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 12 )
custom_styles/normal = SubResource( 11 )
toggle_mode = true
enabled_focus_mode = 0
text = "LEFT ARROW"

[node name="E_BOMB" type="HBoxContainer" parent="MarginContainer/Control/TabContainer/Control/Scroll/VBox"]
margin_top = 539.0
margin_right = 530.0
margin_bottom = 601.0
size_flags_vertical = 6
custom_constants/separation = 40

[node name="Bomb" type="Label" parent="MarginContainer/Control/TabContainer/Control/Scroll/VBox/E_BOMB"]
margin_right = 300.0
margin_bottom = 62.0
rect_min_size = Vector2( 300, 0 )
theme = ExtResource( 2 )
text = "K_S_E_B"

[node name="Button" type="Button" parent="MarginContainer/Control/TabContainer/Control/Scroll/VBox/E_BOMB"]
margin_left = 340.0
margin_right = 530.0
margin_bottom = 62.0
rect_min_size = Vector2( 190, 0 )
focus_mode = 0
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 12 )
custom_styles/normal = SubResource( 11 )
toggle_mode = true
enabled_focus_mode = 0
text = "LEFT ARROW"

[node name="ATTACK" type="HBoxContainer" parent="MarginContainer/Control/TabContainer/Control/Scroll/VBox"]
margin_top = 616.0
margin_right = 530.0
margin_bottom = 678.0
size_flags_vertical = 6
custom_constants/separation = 40

[node name="Attack" type="Label" parent="MarginContainer/Control/TabContainer/Control/Scroll/VBox/ATTACK"]
margin_right = 300.0
margin_bottom = 62.0
rect_min_size = Vector2( 300, 0 )
theme = ExtResource( 2 )
text = "K_S_ATK"

[node name="Button" type="Button" parent="MarginContainer/Control/TabContainer/Control/Scroll/VBox/ATTACK"]
margin_left = 340.0
margin_right = 530.0
margin_bottom = 62.0
rect_min_size = Vector2( 190, 0 )
focus_mode = 0
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 12 )
custom_styles/normal = SubResource( 11 )
toggle_mode = true
enabled_focus_mode = 0
text = "LEFT ARROW"

[node name="EXPLODE" type="HBoxContainer" parent="MarginContainer/Control/TabContainer/Control/Scroll/VBox"]
margin_top = 693.0
margin_right = 530.0
margin_bottom = 755.0
size_flags_vertical = 6
custom_constants/separation = 40

[node name="Explode" type="Label" parent="MarginContainer/Control/TabContainer/Control/Scroll/VBox/EXPLODE"]
margin_right = 300.0
margin_bottom = 62.0
rect_min_size = Vector2( 300, 0 )
theme = ExtResource( 2 )
text = "K_S_EXP"

[node name="Button" type="Button" parent="MarginContainer/Control/TabContainer/Control/Scroll/VBox/EXPLODE"]
margin_left = 340.0
margin_right = 530.0
margin_bottom = 62.0
rect_min_size = Vector2( 190, 0 )
focus_mode = 0
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 12 )
custom_styles/normal = SubResource( 11 )
toggle_mode = true
enabled_focus_mode = 0
text = "LEFT ARROW"

[node name="Other" type="MarginContainer" parent="MarginContainer/Control/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 41.0
custom_constants/margin_right = 0
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="Scroll" type="ScrollContainer" parent="MarginContainer/Control/TabContainer/Other"]
margin_left = 20.0
margin_top = 20.0
margin_right = 564.0
margin_bottom = 356.0
scroll_horizontal_enabled = false

[node name="VBox" type="VBoxContainer" parent="MarginContainer/Control/TabContainer/Other/Scroll"]
margin_right = 530.0
margin_bottom = 62.0
custom_constants/separation = 15

[node name="Lang" type="HBoxContainer" parent="MarginContainer/Control/TabContainer/Other/Scroll/VBox"]
margin_right = 530.0
margin_bottom = 62.0
size_flags_horizontal = 2
size_flags_vertical = 6
custom_constants/separation = 40

[node name="Label" type="Label" parent="MarginContainer/Control/TabContainer/Other/Scroll/VBox/Lang"]
margin_right = 300.0
margin_bottom = 62.0
rect_min_size = Vector2( 300, 0 )
theme = ExtResource( 2 )
text = "K_LANG"

[node name="Option" type="OptionButton" parent="MarginContainer/Control/TabContainer/Other/Scroll/VBox/Lang"]
margin_left = 340.0
margin_right = 530.0
margin_bottom = 62.0
rect_min_size = Vector2( 190, 0 )
focus_mode = 0
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 12 )
custom_styles/normal = SubResource( 11 )
enabled_focus_mode = 0
text = "English"
align = 1

[node name="MarginContainer2" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -100.0
margin_right = 236.0
margin_bottom = 2.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="Back" type="Button" parent="MarginContainer2" groups=["ui_buttons"]]
margin_left = 20.0
margin_top = 20.0
margin_right = 216.0
margin_bottom = 82.0
mouse_default_cursor_shape = 2
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.752941, 0.607843, 0.768627, 1 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
text = "K_BACK"

[connection signal="value_changed" from="MarginContainer/Control/TabContainer/Audio/Control/AudiSlider" to="." method="_on_AudiSlider_value_changed"]
[connection signal="value_changed" from="MarginContainer/Control/TabContainer/Audio/Control2/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="pressed" from="MarginContainer/Control/TabContainer/Control/Scroll/VBox/MOVE_LEFT/Button" to="." method="_on_bind_key" binds= [ "MOVE_LEFT" ]]
[connection signal="pressed" from="MarginContainer/Control/TabContainer/Control/Scroll/VBox/MOVE_RIGHT/Button" to="." method="_on_bind_key" binds= [ "MOVE_RIGHT" ]]
[connection signal="pressed" from="MarginContainer/Control/TabContainer/Control/Scroll/VBox/MOVE_UP/Button" to="." method="_on_bind_key" binds= [ "MOVE_UP" ]]
[connection signal="pressed" from="MarginContainer/Control/TabContainer/Control/Scroll/VBox/MOVE_DOWN/Button" to="." method="_on_bind_key" binds= [ "MOVE_DOWN" ]]
[connection signal="pressed" from="MarginContainer/Control/TabContainer/Control/Scroll/VBox/BUILD/Button" to="." method="_on_bind_key" binds= [ "BUILD" ]]
[connection signal="pressed" from="MarginContainer/Control/TabContainer/Control/Scroll/VBox/E_ATTACKER/Button" to="." method="_on_bind_key" binds= [ "E_ATTACKER" ]]
[connection signal="pressed" from="MarginContainer/Control/TabContainer/Control/Scroll/VBox/E_DEFENDER/Button" to="." method="_on_bind_key" binds= [ "E_DEFENDER" ]]
[connection signal="pressed" from="MarginContainer/Control/TabContainer/Control/Scroll/VBox/E_BOMB/Button" to="." method="_on_bind_key" binds= [ "E_BOMB" ]]
[connection signal="pressed" from="MarginContainer/Control/TabContainer/Control/Scroll/VBox/ATTACK/Button" to="." method="_on_bind_key" binds= [ "ATTACK" ]]
[connection signal="pressed" from="MarginContainer/Control/TabContainer/Control/Scroll/VBox/EXPLODE/Button" to="." method="_on_bind_key" binds= [ "EXPLODE" ]]
[connection signal="item_selected" from="MarginContainer/Control/TabContainer/Other/Scroll/VBox/Lang/Option" to="." method="_on_locale_selected"]
[connection signal="pressed" from="MarginContainer2/Back" to="." method="_on_Back_pressed"]
